# sss

super/: task.txt
super/solana-stablecoin-standard/: ARCHITECTURE.md  Anchor.toml  Cargo.toml  README.md
super/solana-stablecoin-standard/admin-cli/: index.ts  package-lock.json  package.json
super/solana-stablecoin-standard/programs/sss-1/: Cargo.toml
super/solana-stablecoin-standard/programs/sss-1/src/: constants.rs  error.rs  lib.rs  state.rs
super/solana-stablecoin-standard/programs/sss-2/: Cargo.toml
super/solana-stablecoin-standard/programs/sss-2/src/: constants.rs  error.rs  lib.rs  math.rs  state.rs
super/solana-stablecoin-standard/programs/sss-3/: Cargo.toml
super/solana-stablecoin-standard/programs/sss-3/src/: constants.rs  error.rs  lib.rs  state.rs
super/solana-stablecoin-standard/programs/sss-4/: Cargo.toml
super/solana-stablecoin-standard/programs/sss-4/src/: constants.rs  error.rs  lib.rs  math.rs  state.rs
super/solana-stablecoin-standard/programs/sss-transfer-hook/: Cargo.toml
super/solana-stablecoin-standard/programs/sss-transfer-hook/src/: lib.rs
super/solana-stablecoin-standard/proofs-backend/: Cargo.toml
super/solana-stablecoin-standard/proofs-backend/src/: main.rs
super/solana-stablecoin-standard/sdk/: index.ts  package-lock.json  package.json
super/solana-stablecoin-standard/tests/: test.ts
