[package]
name = "sss-1"
version = "0.1.0"
description = "Solana Stablecoin Standard (SSS-1): Fiat-backed style"
edition = "2021"

[lib]
name = "sss_1"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
solana-program = "1.18.0"

