[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard (SSS): Transfer Hook"
edition = "2021"

[lib]
name = "sss_transfer_hook"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-transfer-hook-interface = { version = "0.3.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.7.0", features = ["no-entrypoint"] }

